force-app/main/default/objects/TVA_CO__Email_Send__c/TVA_CO__Email_Send__c.object-meta.xml
<CustomObject>
    <label>Email Send</label>
    <nameField>
        <label>Email Send Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Send</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>