force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Amazon_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Amazon_Template_Name__c</fullName>
    <label>Amazon Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>