force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Apex_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Apex_Job_ID__c</fullName>
    <label>Apex Job ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>