force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Batches_Processed__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Batches_Processed__c</fullName>
    <label>Batches Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>