force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Content_Type__c</fullName>
    <label>Content Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>