force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Custom_Email__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Custom_Email__c</fullName>
    <label>Custom Email</label>
    <length>250</length>
    <type>Text</type>
</CustomField>