force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Custom_Query_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Custom_Query_Filter_Logic__c</fullName>
    <label>Custom Query Filter Logic</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>