force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Days_Selected__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Days_Selected__c</fullName>
    <label>Days Selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TVA_CO__Frequency__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>SUN</fullName>
            </value>
            <value>
                <fullName>MON</fullName>
            </value>
            <value>
                <fullName>TUE</fullName>
            </value>
            <value>
                <fullName>WED</fullName>
            </value>
            <value>
                <fullName>THU</fullName>
            </value>
            <value>
                <fullName>FRI</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>Every Weekday</fullName>
            </value>
            <value>
                <fullName>Every Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>