force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Email_Type__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mass Email</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>