force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Enable_Tracking__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Enable_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Tracking</label>
    <type>Checkbox</type>
</CustomField>