force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__EndDate__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__EndDate__c</fullName>
    <label>End</label>
    <type>Date</type>
</CustomField>