force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Failures__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Failures__c</fullName>
    <label>Failures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>