force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Frequency__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>