force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Job_Aborted__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Job_Aborted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Aborted</label>
    <type>Checkbox</type>
</CustomField>