force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Job_Status__c</fullName>
    <label>Job Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>