force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__MonthlyBase__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__MonthlyBase__c</fullName>
    <label>MonthlyBase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>