force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__On_Day__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__On_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Day</label>
    <type>Checkbox</type>
</CustomField>