force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Pardot_Campaign__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Pardot_Campaign__c</fullName>
    <label>Pardot Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>