force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Parent_Email_Send__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Parent_Email_Send__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Email Send</label>
    <referenceTo>TVA_CO__Email_Send__c</referenceTo>
    <relationshipLabel>Email Sends</relationshipLabel>
    <relationshipName>Email_Sends</relationshipName>
    <type>Lookup</type>
</CustomField>