force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Preferred_Hours__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Preferred_Hours__c</fullName>
    <label>Preferred Hours</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 AM</fullName>
            </value>
            <value>
                <fullName>1 AM</fullName>
            </value>
            <value>
                <fullName>2 AM</fullName>
            </value>
            <value>
                <fullName>3 AM</fullName>
            </value>
            <value>
                <fullName>4 AM</fullName>
            </value>
            <value>
                <fullName>5 AM</fullName>
            </value>
            <value>
                <fullName>6 AM</fullName>
            </value>
            <value>
                <fullName>7 AM</fullName>
            </value>
            <value>
                <fullName>8 AM</fullName>
            </value>
            <value>
                <fullName>9 AM</fullName>
            </value>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 NOON</fullName>
            </value>
            <value>
                <fullName>1 PM</fullName>
            </value>
            <value>
                <fullName>2 PM</fullName>
            </value>
            <value>
                <fullName>3 PM</fullName>
            </value>
            <value>
                <fullName>4 PM</fullName>
            </value>
            <value>
                <fullName>5 PM</fullName>
            </value>
            <value>
                <fullName>6 PM</fullName>
            </value>
            <value>
                <fullName>7 PM</fullName>
            </value>
            <value>
                <fullName>8 PM</fullName>
            </value>
            <value>
                <fullName>9 PM</fullName>
            </value>
            <value>
                <fullName>10 PM</fullName>
            </value>
            <value>
                <fullName>11 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>