force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Preferred_Minutes__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Preferred_Minutes__c</fullName>
    <label>Preferred Minutes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00 Min</fullName>
            </value>
            <value>
                <fullName>15 Min</fullName>
            </value>
            <value>
                <fullName>30 Min</fullName>
            </value>
            <value>
                <fullName>45 Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>