force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Primary_Object__c</fullName>
    <label>Primary Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>