force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Processed_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Processed_Template_Id__c</fullName>
    <label>Processed Template Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>