force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Query__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>