force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>