force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Reply_Address__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Reply_Address__c</fullName>
    <label>Reply Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>