force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Schedule_Drip_After__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Schedule_Drip_After__c</fullName>
    <label>Schedule Drip After</label>
    <length>255</length>
    <type>Text</type>
</CustomField>