force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Schedule_for_delivery_on__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Schedule_for_delivery_on__c</fullName>
    <label>Schedule for delivery on</label>
    <type>DateTime</type>
</CustomField>