force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Selected_View__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Selected_View__c</fullName>
    <label>Selected View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>