force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Send_Signature__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Send_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Signature</label>
    <type>Checkbox</type>
</CustomField>