force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Sender_Address__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Sender_Address__c</fullName>
    <label>Sender Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>