force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__StartDate__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__StartDate__c</fullName>
    <label>Start</label>
    <type>Date</type>
</CustomField>