force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Store_Email_as_Activity__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Store_Email_as_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Email as Activity</label>
    <type>Checkbox</type>
</CustomField>