force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Suppress_Duplicate_Emails__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Suppress_Duplicate_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Duplicate Emails</label>
    <type>Checkbox</type>
</CustomField>