force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__TemplateId__c</fullName>
    <label>TemplateId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>