force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Total_Batches__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Total_Batches__c</fullName>
    <label>Total Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>