force-app/main/default/objects/TVA_CO__Email_Send__c/fields/TVA_CO__Transactional__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Transactional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transactional Email</label>
    <type>Checkbox</type>
</CustomField>