force-app/main/default/objects/TVA_CO__Email_Send__c/validationRules/TVA_CO__Start_Date_greater_than_today.validationRule-meta.xml
<ValidationRule>
    <fullName>TVA_CO__Start_Date_greater_than_today</fullName>
    <active>false</active>
    <errorConditionFormula>AND((ISPICKVAL(TVA_CO__Frequency__c, &quot;Daily&quot;) || ISPICKVAL(TVA_CO__Frequency__c, &quot;Weekly&quot;)),TVA_CO__StartDate__c 
 &lt;= today())</errorConditionFormula>
    <errorDisplayField>TVA_CO__StartDate__c</errorDisplayField>
    <errorMessage>Start Date must be greater than today</errorMessage>
</ValidationRule>