force-app/main/default/objects/TVA_CO__Email_Send__c/listViews/TVA_CO__Kanban_View.listView-meta.xml
<ListView>
    <fullName>TVA_CO__Kanban_View</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Kanban View</label>
</ListView>