force-app/main/default/objects/TVA_CO__Email_Send__c/listViews/TVA_CO__ToDay_Records.listView-meta.xml
<ListView>
    <fullName>TVA_CO__ToDay_Records</fullName>
    <columns>NAME</columns>
    <columns>TVA_CO__Email_Platform__c</columns>
    <columns>TVA_CO__Enable_Tracking__c</columns>
    <columns>TVA_CO__Suppress_Duplicate_Emails__c</columns>
    <columns>TVA_CO__Store_Email_as_Activity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OBJECT_ID</field>
        <operation>notEqual</operation>
    </filters>
    <label>ALL</label>
</ListView>